--- a/posts/2024-10-02-hpsa-prisons/index.qmd
+++ b/posts/2024-10-02-hpsa-prisons/index.qmd
@@ -69,6 +69,7 @@ col_types <- cols(
   Discipline = col_factor(),
   `HHS Region` = col_factor(),
   State = col_factor(),
+  `HPSA Score` = col_integer(), 
   `HPSA Type (Category)` = col_factor(),
   `HPSA Type Code` = col_factor(),
   `HPSA Sub -Type` = col_factor(),
@@ -78,6 +79,7 @@ col_types <- cols(
   `HPSA Component Type` = col_factor(),
   `Designation Date` = col_date(format="%m/%d/%Y"),
   `Last Update Date` = col_date(format="%m/%d/%Y"),
+  `HPSA Designation Population` = col_number(), 
   `As of Date (Close of Business Date)` = col_date(format="%Y-%m-%d"),
   `HRSA Data Warehouse Processing Date` = col_date(format="%m/%d/%Y"),
   .default = col_guess() # ... specify types for other columns as needed
@@ -93,15 +95,14 @@ df_hpsa <- read_csv('https://data.hrsa.gov/DataDownload/DD_Files/HPSA_DASHBOARD.
 # write_csv(df_hpsa, './/data/hpsa_download.csv')
 ```
 
-
-```{r}
+```{r diagnose_category, include=TRUE}
 df_hpsa %>% 
   dlookr::diagnose_category()
 ```
 
 I'd like to analyze the bivariate relationship between mental healthcare providers (at correctional facilities) and the inmate populations across the U.S. *Which areas have the most acute shortage of healthcare professionals working in correctional facilities?*
 
-```{r}
+```{r review_mental_health_correctional, include=TRUE}
 df_hpsa %>% 
   filter(discipline == 'Mental Health',
          hpsa_sub_type == 'Correctional Facility')
@@ -113,7 +114,7 @@ df_hpsa <- df_hpsa %>%
 ```
 
 
-```{r}
+```{r zip_county_join, include=TRUE}
 zctas <- zctas(year = 2020, cb = TRUE)
 
 # Download county data
@@ -124,14 +125,15 @@ zcta_county <- st_join(zctas, counties)
 ```
 
 
-```{r}
+```{r df_mental_health, include=TRUE}
 df_mental_health <- df_hpsa %>% 
   filter(discipline == 'Mental Health',
          hpsa_sub_type == 'Correctional Facility') %>% 
   group_by(state, county, zip_cleaned) %>% 
   summarise(count_mental_health_professionals = n(),
             avg_hpsa_score = mean(hpsa_score, na.rm = TRUE),
-            sum_hpsa_designated_population = sum(hpsa_designation_population, na.rm = TRUE)) %>% 
+            sum_hpsa_designated_population = sum(hpsa_designation_population, na.rm = TRUE),
+            .groups = 'drop') %>% 
   ungroup() %>% 
   # note that there's at least one empty geometry that I'll need to evaluate
   left_join(x=.,
@@ -161,16 +163,7 @@ df_mental_health %>%
   theme_american_inequality_map()
 ```
 
-
-```{r}
-df_hpsa %>% 
-  ggplot(.) + 
-  geom_histogram(aes(last_update_date))
-```
-
 ## Prison populations data 
-
-
 
 ```{r df_prison_pop, include=TRUE}
 df_prison_pop <- read_html('https://www.prisonpolicy.org/data/prison_pops_2019_2023_sources.html') %>% 
@@ -194,7 +187,9 @@ df_prison_pop <- df_prison_pop %>%
 
 ```{r bop_cols, include=TRUE, echo=FALSE}
 bop_cols <- c('Federal BOP' = '#228B22',
-              'Other' = 'gray85')
+              'BOP' = '#228B22',
+              'Other' = 'gray85',
+              'State' = 'gray85')
 ```
 
 ```{r prisonpop_2023_top10, fig.width=10, fig.height=6.2}
@@ -215,206 +210,200 @@ df_prison_pop %>%
   theme(legend.position = 'none')
 ```
 
-```{r}
-
-```
-
-
-
 # Federal Bureau of Prisons 
 
 The Federal Bureau of Prisons has the largest population in this dataset, so I'll need to find a way to assign this population to individual states. I found the BOP inmate population by facility on the [bop.gov/ website](https://www.bop.gov/about/statistics/population_statistics.jsp#old_pops), so I've brought that in and summed the population numbers by state. I'll apply the percent from each state to the Federal BOP population and add that to the state.
 
 ```{r df_bop, include=TRUE, echo=FALSE}
-string_bop_population <- "
-ALDERSON FPC	WV	752
-ALICEVILLE FCI	AL	1428
-ALICEVILLE-CAMP	AL	189
-ALLENWOOD LOW FCI	PA	1037
-ALLENWOOD MED FCI	PA	1252
-ALLENWOOD USP	PA	264
-ASHLAND FCI	KY	1160
-ASHLAND-CAMP	KY	183
-ATLANTA FCI	GA	1838
-ATWATER USP	CA	1074
+string_bop_population <- r"(
+ALDERSON FPC	WV	760
+ALICEVILLE FCI	AL	1425
+ALICEVILLE-CAMP	AL	178
+ALLENWOOD LOW FCI	PA	1057
+ALLENWOOD MED FCI	PA	1253
+ALLENWOOD USP	PA	246
+ASHLAND FCI	KY	1158
+ASHLAND-CAMP	KY	166
+ATLANTA FCI	GA	1880
+ATWATER USP	CA	1088
 ATWATER-CAMP	CA	136
-BASTROP FCI	TX	1013
-BASTROP-CAMP	TX	101
-BEAUMONT LOW FCI-CAMP	TX	470
-BEAUMONT LOW FCI	TX	1656
-BEAUMONT MED FCI	TX	1618
-BEAUMONT USP	TX	1334
-BECKLEY FCI	WV	1555
-BECKLEY-CAMP	WV	111
-BENNETTSVILLE FCI	SC	1520
-BENNETTSVILLE-CAMP	SC	90
-BERLIN FCI	NH	894
-BERLIN-CAMP	NH	78
-BIG SANDY USP	KY	1220
-BIG SANDY-CAMP	KY	56
-BIG SPRING FCI	TX	702
+BASTROP FCI	TX	1030
+BASTROP-CAMP	TX	104
+BEAUMONT LOW FCI-CAMP	TX	478
+BEAUMONT LOW FCI	TX	1666
+BEAUMONT MED FCI	TX	1577
+BEAUMONT USP	TX	1380
+BECKLEY FCI	WV	1592
+BECKLEY-CAMP	WV	130
+BENNETTSVILLE FCI	SC	1495
+BENNETTSVILLE-CAMP	SC	80
+BERLIN FCI	NH	885
+BERLIN-CAMP	NH	80
+BIG SANDY USP	KY	1169
+BIG SANDY-CAMP	KY	62
+BIG SPRING FCI	TX	619
 BIG SPRING-CAMP	TX	109
-BROOKLYN MDC	NY	1218
-BRYAN FPC	TX	636
-BUTNER FMC	NC	849
-BUTNER LOW FCI	NC	981
-BUTNER MED I FCI	NC	577
-BUTNER MED II FCI	NC	1576
-BUTNER-CAMP	NC	263
-CANAAN USP	PA	1192
-CANAAN-CAMP	PA	91
-CARSWELL FMC	TX	1034
-CARSWELL-CAMP	TX	138
-CHICAGO MCC	IL	526
-COLEMAN I USP	FL	1327
-COLEMAN II USP	FL	1116
-COLEMAN LOW FCI-CAMP	FL	456
-COLEMAN LOW FCI	FL	1592
-COLEMAN MED FCI	FL	1527
-CUMBERLAND FCI	MD	774
-CUMBERLAND-CAMP	MD	227
-DANBURY FCI	CT	1099
-DANBURY-CAMP	CT	103
-DEVENS FMC	MA	975
-DEVENS-CAMP	MA	68
-DULUTH FPC	MN	698
-EDGEFIELD FCI	SC	1550
-EDGEFIELD-CAMP	SC	404
-EL RENO FCI	OK	1039
-EL RENO-CAMP	OK	139
-ELKTON FCI	OH	1587
-ELKTON-FSL	OH	384
-ENGLEWOOD FCI	CO	892
-ENGLEWOOD-CAMP	CO	71
+BROOKLYN MDC	NY	1176
+BRYAN FPC	TX	643
+BUTNER FMC	NC	875
+BUTNER LOW FCI	NC	995
+BUTNER MED I FCI	NC	560
+BUTNER MED II FCI	NC	1580
+BUTNER-CAMP	NC	248
+CANAAN USP	PA	1259
+CANAAN-CAMP	PA	95
+CARSWELL FMC	TX	1059
+CARSWELL-CAMP	TX	137
+CHICAGO MCC	IL	459
+COLEMAN I USP	FL	1310
+COLEMAN II USP	FL	1091
+COLEMAN LOW FCI-CAMP	FL	458
+COLEMAN LOW FCI	FL	1568
+COLEMAN MED FCI	FL	1494
+CUMBERLAND FCI	MD	781
+CUMBERLAND-CAMP	MD	239
+DANBURY FCI	CT	1131
+DANBURY-CAMP	CT	113
+DEVENS FMC	MA	1023
+DEVENS-CAMP	MA	67
+DULUTH FPC	MN	726
+EDGEFIELD FCI	SC	1502
+EDGEFIELD-CAMP	SC	398
+EL RENO FCI	OK	1040
+EL RENO-CAMP	OK	142
+ELKTON FCI	OH	1576
+ELKTON-FSL	OH	409
+ENGLEWOOD FCI	CO	911
+ENGLEWOOD-CAMP	CO	73
 ESTILL-CAMP	SC	42
-FAIRTON FCI	NJ	751
-FAIRTON-CAMP	NJ	58
-FLORENCE ADMAX USP	CO	344
-FLORENCE FCI-CAMP	CO	326
-FLORENCE FCI	CO	1136
-FLORENCE HIGH USP	CO	803
-FORREST CITY FCI-CAMP	AR	247
-FORREST CITY FCI	AR	1603
-FORREST CITY MED FCI	AR	1620
-FORT DIX FCI	NJ	3779
-FORT DIX-CAMP	NJ	263
-FORT WORTH ADMINISTRATIVE	TX	1544
-GILMER FCI	WV	1143
-GILMER-CAMP	WV	54
-GREENVILLE FCI	IL	1164
-GREENVILLE-CAMP	IL	143
-GUAYNABO MDC	PR	1113
-HAZELTON FCI-FEMALE	WV	522
-HAZELTON FCI	WV	1579
-HAZELTON USP	WV	1274
-HAZELTON-CAMP	WV	159
-HERLONG FCI	CA	1414
-HERLONG-CAMP	CA	82
-HONOLULU FDC	HI	223
-HOUSTON FDC	TX	908
-JESUP FCI	GA	1033
-JESUP-CAMP	GA	126
-JESUP-FSL	GA	504
-LA TUNA FCI	TX	572
-LA TUNA-CAMP	TX	120
-LEAVENWORTH FCI	KS	1579
-LEAVENWORTH-CAMP	KS	127
-LEE USP-CAMP	VA	65
-LEE USP	VA	1273
-LEWISBURG FCI	PA	669
-LEWISBURG-CAMP	PA	459
-LEXINGTON FMC	KY	1107
-LEXINGTON-CAMP	KY	235
+FAIRTON FCI	NJ	748
+FAIRTON-CAMP	NJ	57
+FLORENCE ADMAX USP	CO	355
+FLORENCE FCI-CAMP	CO	328
+FLORENCE FCI	CO	1094
+FLORENCE HIGH USP	CO	783
+FORREST CITY FCI-CAMP	AR	245
+FORREST CITY FCI	AR	1611
+FORREST CITY MED FCI	AR	1645
+FORT DIX FCI	NJ	3768
+FORT DIX-CAMP	NJ	251
+FORT WORTH ADMINISTRATIVE	TX	1547
+GILMER FCI	WV	1034
+GILMER-CAMP	WV	51
+GREENVILLE FCI	IL	1144
+GREENVILLE-CAMP	IL	136
+GUAYNABO MDC	PR	1138
+HAZELTON FCI-FEMALE	WV	509
+HAZELTON FCI	WV	1576
+HAZELTON USP	WV	1314
+HAZELTON-CAMP	WV	157
+HERLONG FCI	CA	1456
+HERLONG-CAMP	CA	79
+HONOLULU FDC	HI	220
+HOUSTON FDC	TX	873
+JESUP FCI	GA	1040
+JESUP-CAMP	GA	118
+JESUP-FSL	GA	499
+LA TUNA FCI	TX	637
+LA TUNA-CAMP	TX	110
+LEAVENWORTH FCI	KS	1547
+LEAVENWORTH-CAMP	KS	151
+LEE USP-CAMP	VA	73
+LEE USP	VA	1270
+LEWISBURG FCI	PA	708
+LEWISBURG-CAMP	PA	466
+LEXINGTON FMC	KY	1090
+LEXINGTON-CAMP	KY	229
 LOMPOC FCI	CA	885
-LOMPOC II FCI-CAMP N	CA	104
+LOMPOC II FCI-CAMP N	CA	99
 LOMPOC II FCI-CAMP	CA	190
-LOMPOC II FCI	CA	1758
-LORETTO FCI	PA	774
-LORETTO-CAMP	PA	65
-LOS ANGELES MDC	CA	705
-MANCHESTER FCI	KY	980
-MANCHESTER-CAMP	KY	87
-MARIANNA FCI	FL	983
-MARIANNA-CAMP	FL	257
-MARION FCI	IL	1045
-MARION-CAMP	IL	191
-MCCREARY USP	KY	1393
-MCCREARY-CAMP	KY	101
-MCDOWELL FCI	WV	1544
-MCDOWELL-CAMP	WV	37
-MCKEAN FCI	PA	962
-MCKEAN-CAMP	PA	165
+LOMPOC II FCI	CA	1752
+LORETTO FCI	PA	797
+LORETTO-CAMP	PA	73
+LOS ANGELES MDC	CA	749
+MANCHESTER FCI	KY	999
+MANCHESTER-CAMP	KY	107
+MARIANNA FCI	FL	958
+MARIANNA-CAMP	FL	246
+MARION FCI	IL	1048
+MARION-CAMP	IL	195
+MCCREARY USP	KY	1350
+MCCREARY-CAMP	KY	103
+MCDOWELL FCI	WV	1604
+MCDOWELL-CAMP	WV	38
+MCKEAN FCI	PA	955
+MCKEAN-CAMP	PA	172
 MEMPHIS FCI	TN	1102
-MEMPHIS-CAMP	TN	73
-MENDOTA FCI	CA	700
+MEMPHIS-CAMP	TN	91
+MENDOTA FCI	CA	674
 MENDOTA-CAMP	CA	111
-MIAMI FCI-CAMP	FL	194
-MIAMI FCI	FL	840
-MIAMI FDC	FL	973
-MILAN FCI	MI	1610
-MONTGOMERY FPC	AL	767
-MORGANTOWN FPC	WV	402
-OAKDALE I FCI	LA	980
-OAKDALE II FCI-CAMP	LA	121
-OAKDALE II FCI	LA	1060
-OKLAHOMA CITY FTC	OK	1452
-OTISVILLE FCI	NY	813
-OTISVILLE-CAMP	NY	95
-OXFORD FCI	WI	1116
-PEKIN FCI	IL	1045
-PEKIN-CAMP F	IL	245
-PENSACOLA FPC	FL	492
-PETERSBURG FCI-CAMP	VA	159
-PETERSBURG FCI	VA	439
-PETERSBURG MED FCI	VA	1588
-PHILADELPHIA FDC	PA	920
-PHOENIX FCI	AZ	916
-PHOENIX-CAMP	AZ	236
-POLLOCK MED FCI-CAMP	LA	171
-POLLOCK MED FCI	LA	1526
-POLLOCK USP	LA	1106
-RAY BROOK FCI	NY	883
-ROCHESTER FMC	MN	796
-SAFFORD FCI	AZ	651
-SAN DIEGO MCC	CA	766
-SANDSTONE FCI	MN	1180
-SCHUYLKILL FCI	PA	1028
-SCHUYLKILL-CAMP	PA	149
-SEAGOVILLE FCI	TX	1653
-SEAGOVILLE-CAMP	TX	97
-SEATAC FDC	WA	625
-SHERIDAN FCI	OR	1255
-SHERIDAN-CAMP	OR	257
-SPRINGFIELD USMCFP	MO	1090
-TALLADEGA FCI	AL	980
-TALLADEGA-CAMP	AL	212
-TALLAHASSEE FCI	FL	1169
+MIAMI FCI-CAMP	FL	190
+MIAMI FCI	FL	841
+MIAMI FDC	FL	1068
+MILAN FCI	MI	1598
+MONTGOMERY FPC	AL	780
+MORGANTOWN FPC	WV	398
+OAKDALE I FCI	LA	982
+OAKDALE II FCI-CAMP	LA	123
+OAKDALE II FCI	LA	1058
+OKLAHOMA CITY FTC	OK	1489
+OTISVILLE FCI	NY	806
+OTISVILLE-CAMP	NY	93
+OXFORD FCI	WI	1161
+PEKIN FCI	IL	1030
+PEKIN-CAMP F	IL	246
+PENSACOLA FPC	FL	515
+PETERSBURG FCI-CAMP	VA	158
+PETERSBURG FCI	VA	451
+PETERSBURG MED FCI	VA	1562
+PHILADELPHIA FDC	PA	861
+PHOENIX FCI	AZ	989
+PHOENIX-CAMP	AZ	243
+POLLOCK MED FCI-CAMP	LA	169
+POLLOCK MED FCI	LA	1534
+POLLOCK USP	LA	1054
+RAY BROOK FCI	NY	821
+ROCHESTER FMC	MN	787
+SAFFORD FCI	AZ	668
+SAN DIEGO MCC	CA	725
+SANDSTONE FCI	MN	1175
+SCHUYLKILL FCI	PA	1052
+SCHUYLKILL-CAMP	PA	163
+SEAGOVILLE FCI	TX	1645
+SEAGOVILLE-CAMP	TX	94
+SEATAC FDC	WA	622
+SHERIDAN FCI	OR	1321
+SHERIDAN-CAMP	OR	249
+SPRINGFIELD USMCFP	MO	1103
+TALLADEGA FCI	AL	957
+TALLADEGA-CAMP	AL	216
+TALLAHASSEE FCI	FL	1178
 TERMINAL ISLAND FCI	CA	939
-TERRE HAUTE FCI-CAMP	IN	267
-TERRE HAUTE FCI	IN	1054
-TERRE HAUTE USP	IN	1322
-TEXARKANA FCI	TX	1154
-TEXARKANA-CAMP	TX	176
-THOMSON FCI-CAMP	IL	133
-THOMSON FCI	IL	1901
-THREE RIVERS FCI	TX	1079
-THREE RIVERS-CAMP	TX	165
-TUCSON FCI	AZ	476
-TUCSON USP	AZ	1027
-TUCSON-CAMP	AZ	107
-VICTORVILLE MED I FCI	CA	1423
-VICTORVILLE MED I-CAMP	CA	226
-VICTORVILLE MED II FCI	CA	1475
-VICTORVILLE USP	CA	1176
-WASECA FCI	MN	884
-WILLIAMSBURG FCI	SC	1227
-WILLIAMSBURG-CAMP	SC	85
-YANKTON FPC	SD	483
-YAZOO CITY LOW FCI-CAMP	MS	101
-YAZOO CITY LOW FCI	MS	1365
-YAZOO CITY LOW II FCI	MS	1421
-YAZOO CITY MED FCI	MS	1412
-"
+TERRE HAUTE FCI-CAMP	IN	276
+TERRE HAUTE FCI	IN	1197
+TERRE HAUTE USP	IN	1353
+TEXARKANA FCI	TX	1164
+TEXARKANA-CAMP	TX	181
+THOMSON FCI-CAMP	IL	137
+THOMSON FCI	IL	1921
+THREE RIVERS FCI	TX	1063
+THREE RIVERS-CAMP	TX	185
+TUCSON FCI	AZ	396
+TUCSON USP	AZ	1003
+TUCSON-CAMP	AZ	112
+VICTORVILLE MED I FCI	CA	1465
+VICTORVILLE MED I-CAMP	CA	230
+VICTORVILLE MED II FCI	CA	1563
+VICTORVILLE USP	CA	1192
+WASECA FCI	MN	819
+WILLIAMSBURG FCI	SC	1223
+WILLIAMSBURG-CAMP	SC	84
+YANKTON FPC	SD	477
+YAZOO CITY LOW FCI-CAMP	MS	98
+YAZOO CITY LOW FCI	MS	1377
+YAZOO CITY LOW II FCI	MS	1451
+YAZOO CITY MED FCI	MS	1386
+)"
 
 df_bop <- read_delim(string_bop_population, delim = "\t", col_names = FALSE)
 
@@ -422,8 +411,8 @@ colnames(df_bop) <- c("facility_name", "state", "prisonpop_bop")
 
 df_bop_grp <- df_bop %>%
   group_by(state) %>% 
-  summarise(prisonpop_bop = sum(prisonpop_bop)) %>% 
-  ungroup() %>% 
+  summarise(prisonpop_bop = sum(prisonpop_bop),
+            .groups = 'drop') %>% 
   mutate(perc_total_bop = prisonpop_bop / sum(prisonpop_bop))
 ```
 
@@ -447,10 +436,34 @@ states_map <- map_data("state")
 
 
 ```{r df_prisonpop2, include=TRUE, echo=FALSE}
-df_prison_pop %>% 
+df_prison_bop <- df_prison_pop %>% 
   left_join(x=.,
             y=df_bop_grp %>% select(state_name, prisonpop_bop, perc_total_bop),
-            by=c('state' = 'state_name'))
+            by=c('state' = 'state_name')) %>% 
+  mutate(prisonpop_2023_incl_bop = prisonpop_2023_derived + prisonpop_bop)
+
+df_prison_bop %>% 
+  top_n(10, prisonpop_2023_incl_bop) %>% 
+  select(state, prisonpop_bop,prisonpop_2023_derived) %>% 
+  pivot_longer(prisonpop_bop:prisonpop_2023_derived, names_to = 'state_or_bop', values_to = 'values') %>% 
+  mutate(state_or_bop = case_when(
+    state_or_bop == 'prisonpop_bop' ~ "BOP",
+    state_or_bop == 'prisonpop_2023_derived' ~ "State")
+    ) %>% 
+  ggplot(.) + 
+  geom_col(aes(x=values,
+               y=state,
+               # y=reorder(state, df_prison_bop %>% top_n(10, prisonpop_2023_incl_bop) %>% arrange(-prisonpop_2023_incl_bop) %>% pull(prisonpop_2023_incl_bop)),
+               fill=state_or_bop)) + 
+  scale_x_continuous(labels = scales::comma) + 
+  scale_fill_manual(values = bop_cols) + 
+  # ggtitle(glue("The <span style='color:#228B22'>**Federal Bureau of Prisons**</span> has a larger inmate<br>population than any state in 2023"),
+  #         subtitle = '\n') + 
+  labs(x='',
+       y='',
+       caption='Source: Prison Policy Initiative\nData for Texas from 2022') + 
+  theme_american_inequality_map() + 
+  theme(legend.position = 'none')
 ```
 
 
