--- a/posts/2024-10-02-hpsa-prisons/index.qmd
+++ b/posts/2024-10-02-hpsa-prisons/index.qmd
@@ -113,7 +113,6 @@ df_hpsa <- df_hpsa %>%
   mutate(zip_cleaned = str_extract(hpsa_facility_zip_code, "^\\d{5}"))
 ```
 
-
 ```{r zip_county_join, include=TRUE}
 zctas <- zctas(year = 2020, cb = TRUE)
 
@@ -122,6 +121,11 @@ counties <- counties(year = 2020, cb = TRUE)
 
 # Perform a spatial join between ZCTAs and counties
 zcta_county <- st_join(zctas, counties)
+```
+
+```{r}
+df_hpsa %>% 
+  select(contains('zip'))
 ```
 
 
@@ -134,7 +138,6 @@ df_mental_health <- df_hpsa %>%
             avg_hpsa_score = mean(hpsa_score, na.rm = TRUE),
             sum_hpsa_designated_population = sum(hpsa_designation_population, na.rm = TRUE),
             .groups = 'drop') %>% 
-  ungroup() %>% 
   # note that there's at least one empty geometry that I'll need to evaluate
   left_join(x=.,
             y=zcta_county %>% select(NAME, STUSPS, ZCTA5CE20, geometry) %>%
@@ -145,13 +148,27 @@ df_mental_health <- df_hpsa %>%
 ```
 
 
+```{r map_states, include=TRUE}
+# in progress
+states <- map_data("state")
+counties <- map_data("county")
+?map_data()
+```
+
 https://cran.r-project.org/web/packages/biscale/vignettes/biscale.html
 
 ```{r fig.width=10, fig.height=6.2}
 df_mental_health %>% 
-  filter(!state_name %in% c('AK', 'HI', 'PR', 'GU')) %>% 
+  # filter(!state_name %in% c('AK', 'HI', 'PR', 'GU')) %>% 
+  filter(state_name %in% c('CO')) %>% 
   ggplot(.) + 
   geom_sf(aes(fill=avg_hpsa_score, geometry=geometry)) + 
+  # geom_polygon(data = counties %>% filter(region == 'colorado'),
+  #              aes(x = long, y = lat, group = group),
+  #              fill = NA, linewidth = 0.5, color='black') + 
+  # geom_polygon(data = states %>% filter(region == 'colorado'),
+  #              aes(x = long, y = lat, group = group),
+  #              fill = NA, linewidth = 0.5, color='black') +
   coord_sf(datum = NA) + 
     scale_fill_gradient2(
     low = "#2469b3",
@@ -199,7 +216,9 @@ df_prison_pop %>%
   geom_col(aes(x=prisonpop_2023_derived,
                y=reorder(state, prisonpop_2023_derived),
                fill=if_else(state == 'Federal BOP', 'Federal BOP', 'Other'))) + 
-  scale_x_continuous(labels = scales::comma) + 
+  scale_x_continuous(labels = scales::comma,
+                     expand = expansion(mult = c(0, 0.05))) + 
+  # scale_y_discrete(expand = expansion(mult = c(0, 0.05))) +
   scale_fill_manual(values = bop_cols) + 
   ggtitle(glue("The <span style='color:#228B22'>**Federal Bureau of Prisons**</span> has a larger inmate<br>population than any state in 2023"),
           subtitle = '\n') + 
@@ -207,7 +226,8 @@ df_prison_pop %>%
        y='',
        caption='Source: Prison Policy Initiative\nData for Texas from 2022') + 
   theme_american_inequality_map() + 
-  theme(legend.position = 'none')
+  theme(legend.position = 'none',
+        axis.text = element_text(size=14))
 ```
 
 # Federal Bureau of Prisons 
@@ -492,6 +512,12 @@ df_mental_health %>%
                      labels = scales::comma) + 
   theme_american_inequality_map()
 ```
+
+
+# Sandbox
+
+## Zip code analysis 
+
 
 
 
