--- a/visualizations/12-30-2022-tt-wk38-2019/index.qmd
+++ b/visualizations/12-30-2022-tt-wk38-2019/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Tidy Tuesday: Week 38, 2019"
-# description: "This skills workshop introduced R and the tidyverse to Master's students at the University of Denver"
+description: "Test"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
