--- a/visualizations/12-30-2022-tt-wk38-2019/index.qmd
+++ b/visualizations/12-30-2022-tt-wk38-2019/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Tidy Tuesday: Week 38, 2019"
-description: "Test"
+description: "Visits to U.S. National Parks"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
