--- a/visualizations/12-30-2022-tt-wk38-2019/index.qmd
+++ b/visualizations/12-30-2022-tt-wk38-2019/index.qmd
@@ -1,12 +1,12 @@
 ---
-title: "Tidy Tuesday: Week 38, 2019"
-description: "Visits to U.S. National Parks"
+title: "U.S. National Parks Visits (1904-2016)"
+description: "Tidy Tuesday: Week 38, 2019"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
     #orcid: 0000-0002-5300-3075
 date: 12-30-2022
-categories: [R, tidyverse, ggplot, data-viz] # self-defined categories
+categories: [R, tidy-tuesday, bump-chart] # self-defined categories
 #citation: 
  # url: https://mrafa3.github.io/posts/2024-07-15-wikipedia-international-mens-soccer/ 
 image: plot_viz_538.png
