--- a/visualizations.qmd
+++ b/visualizations.qmd
@@ -1,8 +1,10 @@
 ---
-title: "Visualizations (more coming soon!)"
+title: "Visualizations"
 listing: 
   contents: visualizations # all Quarto docs in the `posts` directory will be included on your listing page
   type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
   categories: true # allows you to sort posts by assigned categories 
 ---
+
+I'll be migrating viz portfolio here soon!
