--- a/visualizations.qmd
+++ b/visualizations.qmd
@@ -4,7 +4,8 @@ listing:
   contents: visualizations # all Quarto docs in the `posts` directory will be included on your listing page
   type: grid # or `default` or `table`; each type has its own set of yaml options to include
   sort: "date desc" # can also sort on more than one field
-  categories: true # allows you to sort posts by assigned categories 
+  categories: true # allows you to sort posts by assigned categories
+  # fields: [image, title, date] this line pushes the subtitle to the specific page and off of the visualizations landing page
 ---
 
 I'll be migrating viz portfolio here soon!
