--- a/visualizations/12-30-2022-tt-wk38-2019/index.qmd
+++ b/visualizations/12-30-2022-tt-wk38-2019/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "U.S. National Parks Visits (1904-2016)"
-description: "Tidy Tuesday: Week 38, 2019"
+description: "Evaluating changes in the popularity of U.S. National Parks over time"
 author:
   - name: Mickey Rafa
     url: https://mrafa3.github.io/
