--- a/visualizations/2020-10-29-tt-wk3-2020/index.qmd
+++ b/visualizations/2020-10-29-tt-wk3-2020/index.qmd
@@ -93,8 +93,8 @@ passwords %>%
 
 ```{r my_theme, include=TRUE}
 my_theme <- theme(
-  plot.title = element_markdown(family="Courier Prime", color="black", size=24, hjust=0), 
-  plot.subtitle = element_textbox_simple(family="Courier Prime", color="black", size=12, hjust=0), 
+  plot.title = element_markdown(family="Courier Prime", color="black", size=22, hjust=0, margin = margin(b = 10)), 
+  plot.subtitle = element_textbox_simple(family="Courier Prime", color="black", size=12, hjust=0, margin = margin(b = 10)), 
   axis.title = element_text(family="Courier Prime", color="black", face="bold", size=12), 
   axis.text = element_text(family="Courier Prime", color="black", size=13), 
   axis.ticks.y = element_blank(), 
@@ -113,7 +113,7 @@ my_theme <- theme(
 
 # 6. Plot 
 
-```{r include=TRUE, fig.width=10, fig.height=6, fig.align='center'}
+```{r strength_viz, include=TRUE, fig.width=10, fig.height=6, fig.align='center'}
 (strength_viz <- passwords_grp %>% 
   ggplot(.,
          aes(x=strength,
@@ -123,17 +123,19 @@ my_theme <- theme(
               height=.2, width = .5) + 
   geom_vline(aes(xintercept = median(strength)),
              linetype='dashed') + 
-  ggrepel::geom_text_repel(data=. %>% 
-                             ungroup() %>% 
+  ggrepel::geom_text_repel(data=. %>%
+                             ungroup() %>%
                              slice_max(strength),
                             aes(label=password),
                            force=10,
+                           vjust = 4,
+                           # force_y = 4,
                            family='Courier Prime',
                            box.padding = 1,
-                           size=6) + 
+                           size=6) +
   labs(x='\nRelative strength of password',
        y='',
-       title='Relative **password strength** by category of password',
+       title='Relative **password strength** by category',
        subtitle='Each dot represents a unique password from the Knowledge is Beautiful password database<br>**rush2112** is the password with the highest strength score in the dataset',
        caption='Tidy Tuesday Week 3 (2020)<br>**Source**: Knowledge is Beautiful') + 
   my_theme + 
@@ -147,7 +149,7 @@ my_theme <- theme(
 ggsave(
   filename = glue("tt_{tt_year}_{tt_week}.png"),
   plot = strength_viz,
-  width = 10, height = 8, units = "in", dpi = 320
+  width = 10, height = 6, units = "in", dpi = 300
 )
 
 # make thumbnail for page
